Adding more docs for Swagger
