# handler/list_opening.go
@@ -7,6 +7,16 @@ import (
 	"github.com/lucasassuncao/gopportunities/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary List Openings
+// @Description List all job openings
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Success 200 {object} ListOpeningsResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /openings [get]
 func ListOpeningHandler(ctx *gin.Context) {
 	opening := []schemas.Opening{}
 
